UI updates, game engine and creatures